<resources>
  <string name="app_name">GrainSellingApp</string>
  <string name="userName">Username</string>
  <string name="password">Password</string>
  <string name="name">name</string>
  <string name="already_member">Already Member?</string>
  <string name="login_here">Login Here</string>
  <string name="dont_have_account">Don\'t have Account?</string>
  <string name="register">Register Here</string>
  <string name="quantity">Quantity</string>
  <string name="price">Price</string>
  <string name="Rs">\u20B9</string>
  <string name="Mt">Mt</string>
  <string name="add_request">Add Request</string>
  <string name="title_activity_create_profile">Create Your Profile</string>
  <string name="full_name">Full Name</string>
  <string name="address">Address</string>
  <string name="contact_number">Contact Number</string>
  <string name="dob">Date of Birth</string>
  <string name="wait_a_moment">Wait a moment…</string>
  <string name="saving_profile_information">Saving Profile Information</string>
  <string name="technical_difficulty">We\'re facing technical difficulty. Please try again later.</string>
  <string name="delete">Delete</string>
  <string name="edit">Edit</string>
  <string name="crop_name">Crop Name</string>
  <string name="SignUp">SignUp</string>
  <string name="login">Login</string>
  <string name="create_crop_request">Create Crop Request</string>
  <string name="your_crops_request">Your Crop Requests</string>
  <string name="male">Male</string>
  <string name="female">Female</string>
  <string-array name="gender">
    <item>Select Gender</item>
    <item>@string/male</item>
    <item>@string/female</item>
  </string-array>
</resources>
