<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="16dp"
    android:orientation="horizontal">

    <TextView
      android:layout_width="100dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="16dp"
      android:gravity="center_vertical"
      android:text="Crop Name"
      android:textColor="@color/secondaryDark"
      android:textSize="15sp"
      android:textStyle="bold" />

    <Spinner
      android:id="@+id/crop_name"
      android:layout_width="200dp"
      android:layout_height="20dp"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="8dp"
      android:drawSelectorOnTop="true"
      android:inputType="numberDecimal" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    android:orientation="horizontal">

    <TextView
      android:layout_width="100dp"
      android:gravity="center_vertical"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="16dp"
      android:text="@string/quantity"
      android:textColor="@color/secondaryDark"
      android:textSize="15sp"
      android:textStyle="bold" />

    <EditText
      android:id="@+id/quantity_make_request"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:inputType="numberDecimal" />

    <TextView
      android:textSize="15sp"
      android:layout_width="20dp"
      android:layout_height="20dp"
      android:gravity="bottom"
      android:text="@string/Mt" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    android:orientation="horizontal">

    <TextView
      android:layout_width="100dp"
      android:gravity="center_vertical"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="16dp"
      android:text="@string/price"
      android:textColor="@color/secondaryDark"
      android:textSize="15sp"
      android:textStyle="bold" />

    <EditText
      android:id="@+id/price_make_request"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:inputType="numberDecimal" />

    <TextView
      android:layout_width="20dp"
      android:layout_height="20dp"
      android:gravity="bottom"
      android:textSize="15sp"
      android:text="@string/Rs" />
  </LinearLayout>
</LinearLayout>

